fix disruption scrolling issues on iphone

--- a/app/component/disruption/disruption.scss
+++ b/app/component/disruption/disruption.scss
@@ -44,3 +44,8 @@
   width: 2em;
   fill: $disruption-color;
 }
+
+.modal-content {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
